# 003-BootcampPython

./: README.md
001-Introducao/: README.md  main.py
002-PreparacaoAmbienteVirtual/: README.md
002-PreparacaoAmbienteVirtual/projeto_django/: pyproject.toml
